# turboquant_llama

./: README.md  pyproject.toml
docs/: getting-started.md  mlx-swift-pr14-gemma4-benchmark-brief.md  weight-compression-results.md
docs/papers/: asymmetric-kv-compression.md  layer-aware-v-compression.md  triattention-v3.md
ggml/src/: ggml-quants.h
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp
ggml/src/ggml-cuda/: fattn-tile.cu  fattn.cu  ggml-cuda.cu
ggml/src/ggml-metal/: ggml-metal-device.m  ggml-metal.metal
ggml/src/ggml-rpc/: ggml-rpc.cpp
refract/: CHANGELOG.md  LEADERBOARD.md  LIMITATIONS.md  MATRIX-RESULTS.md  PITFALLS.md  QUICKSTART.md  README.md  __init__.py  cli.py  report.py  report_html.py  runner.py  score.py
refract/axes/: __init__.py  kld.py  plad.py  rniah.py  trajectory.py
refract/backends/: __init__.py  base.py  mlx.py  vllm.py
refract/examples/: README.md  catastrophic-symturbo.html  catastrophic-symturbo.json  clean-q8q8-mistral24b.html  clean-q8q8-mistral24b.json  degraded-qwen7b.html  degraded-qwen7b.json  distribution-broken-gemma26b.html  distribution-broken-gemma26b.json
refract/tests/: test_backends.py  test_bugs.py  test_cli_extra.py  test_cli_runs.py  test_command_construction.py  test_corpus_identity.py  test_report.py  test_report_extras.py  test_report_html.py  test_report_json_layout.py  test_score.py  test_validation.py
src/: llama-graph.cpp  llama-kv-cache.cpp
tests/: test-backend-ops.cpp  test_turbo4.py
